--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-algencan-3.1.1*
-.ipynb_checkpoints*
-algencan.out
 .vscode
-
+algencan.out
+algencan_hsl_accel_cutest.txt
+cutest_selection.old
+cutest_selection.txt
