Adding dev versions of BLAS/Lapack libraries to help build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ matrix:
 addons:
   apt_packages:
     - gfortran
+    - liblapack3
+    - liblapack-dev
     - libopenblas-base
+    - libopenblas-dev
 
 branches:
   only:
