--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,18 @@ language: julia
 matrix:
   include:
     - os: linux
-      julia: 0.6
+      dist: xenial
+      julia: 1.0
     - os: osx
-      julia: 0.6
+      julia: 1.0
 
 addons:
   apt_packages:
     - gfortran
+    - liblapack3
+    - liblapack-dev
+    - libopenblas-base
+    - libopenblas-dev
 
 branches:
   only:
@@ -19,16 +24,14 @@ branches:
 
 before_install:
   - if [ `uname` == "Linux" ]; then unset DY_LIBRARY_PATH; fi
-  - if [ `uname` == "Darwin" ]; then brew update && brew install gcc; fi
+  - if [ `uname` == "Darwin" ]; then brew update && brew install gcc openblas; fi
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 
 install:
-  - julia -e 'versioninfo()'
-  - julia -E 'Pkg.clone(pwd());'
-  - julia -E 'Pkg.build("Algencan");'
+  - julia -E 'using Pkg; Pkg.clone(pwd()); Pkg.build("Algencan");'
 
 script:
-  - julia --check-bounds=yes -E 'Pkg.test("Algencan"; coverage=true)'
+  - julia --check-bounds=yes -E 'using Pkg; Pkg.test("Algencan"; coverage=true)'
 
 after_success:
-  - julia -e 'cd(Pkg.dir("Algencan")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'using Pkg; cd(Pkg.dir("Algencan")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
