--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: julia
 
-# TODO: Check if OSX steps are all necessary
-
 matrix:
   include:
     - os: linux
-      dist: xenial
-      julia: 1.0
+      dist: focal
+      julia: 1.4
     - os: osx
-      julia: 1.0
+      julia: 1.4
 
 addons:
   apt_packages:
@@ -24,14 +22,15 @@ branches:
 
 before_install:
   - if [ `uname` == "Linux" ]; then unset DY_LIBRARY_PATH; fi
-  - if [ `uname` == "Darwin" ]; then brew update && brew install gcc openblas; fi
+  - if [ `uname` == "Darwin" ]; then brew install openblas; fi
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
 
 install:
-  - julia -E 'using Pkg; Pkg.clone(pwd()); Pkg.build("Algencan");'
+  - julia -E 'using Pkg; Pkg.build()'
 
 script:
-  - julia --check-bounds=yes -E 'using Pkg; Pkg.test("Algencan"; coverage=true)'
+  - julia --check-bounds=yes -E 'using Pkg; Pkg.test("NLPModelsAlgencan"; coverage=true)'
 
 after_success:
-  - julia -e 'using Pkg; cd(Pkg.dir("Algencan")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'using Pkg; cd(Pkg.dir("NLPModelsAlgencan")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+
