--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,9 @@ install:
 
 script:
   - julia --check-bounds=yes -E 'using Pkg; Pkg.test("NLPModelsAlgencan"; coverage=true)'
+  - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+  - julia --project=docs/ docs/make.jl
+
 
 after_success:
   - julia -e 'using Pkg; cd(Pkg.dir("NLPModelsAlgencan")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
