--- a/Project.toml
+++ b/Project.toml
@@ -14,3 +14,12 @@ NLPModelsJuMP = "792afdf1-32c1-5681-94e0-d7bf7a5df49e"
 SolverTools = "b5612192-2639-5dc1-abfe-fbedd65fab29"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[compat]
+BinDeps = "1.0.0"
+CUTEst = "0.10.0"
+Coverage = "1.2.0"
+NLPModels = "0.13"
+NLPModelsJuMP = "0.7.0"
+SolverTools = "0.3"
+julia = "^1.3.0"
