--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
