--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "NLPModelsAlgencan"
 uuid = "04216931-dc08-4b80-8a27-8a88dc4b9604"
 authors = ["Paulo J. S. Silva <pjssilva@gmail.com>", "Ilan Francisco da Silva <ilanfsilva@gmail.com>]"]
-version = "0.4.0"
+version = "0.4.1"
 
 [deps]
+ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
 BinDeps = "9e28174c-4ba2-5203-b857-d8d62c4213ee"
 CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
@@ -11,15 +12,18 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
 NLPModelsJuMP = "792afdf1-32c1-5681-94e0-d7bf7a5df49e"
+SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
 SolverTools = "b5612192-2639-5dc1-abfe-fbedd65fab29"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-BinDeps = "1.0.0"
-CUTEst = "0.10.0"
-Coverage = "1.2.0"
-NLPModels = "0.13"
-NLPModelsJuMP = "0.7.0"
-SolverTools = "0.3"
-julia = "^1.3.0"
+ADNLPModels = "0.3"
+BinDeps = "1.0"
+CUTEst = "0.12"
+Coverage = "1.2"
+NLPModels = "0.18"
+NLPModelsJuMP = "0.9"
+SolverCore = "0.2"
+SolverTools = "0.8"
+julia = "^1.6.0"
