--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,15 +23,16 @@ jobs:
       - uses: actions/checkout@v1
       - name: install gfortran and lapack
         run: |
-            sudo apt update
-            sudo apt install build-essential gfortran liblapack3 liblapack-dev libopenblas-base libopenblas-dev
+            sudo apt-get update
+            sudo apt-get install --yes build-essential gfortran liblapack3 liblapack-dev libopenblas-base libopenblas-dev
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
+      - uses: julia-actions/julia-runtest@latest
       - name: Setup upterm session
         uses: lhotari/action-upterm@v1
-      - uses: julia-actions/julia-runtest@latest
+        if: always()
       - uses: julia-actions/julia-uploadcodecov@latest
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
