--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
           - '1.6'
         os:
           - ubuntu-latest
-          # - macOS-latest
+          - macOS-latest
           # - windows-latest
         arch:
           - x64
@@ -23,8 +23,12 @@ jobs:
       - uses: actions/checkout@v1
       - name: install gfortran and lapack
         run: |
-            sudo apt-get update
-            sudo apt-get install --yes build-essential gfortran liblapack3 liblapack-dev libopenblas-base libopenblas-dev
+            if ${{ contains(matrix.os, 'ubuntu') }}; then
+              sudo apt-get update
+              sudo apt-get install --yes build-essential gfortran liblapack3 liblapack-dev libopenblas-base libopenblas-dev
+            elif ${{ contains(matrix.os, 'macOS') }}; then
+              brew install openblas
+            fi
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.version }}
