--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ BinDeps = "1.0"
 CUTEst = "0.12"
 Coverage = "1.2"
 NLPModels = "0.18"
-NLPModelsJuMP = "0.9"
+NLPModelsJuMP = "0.9, 0.10, 0.11"
 SolverCore = "0.2"
 SolverTools = "0.8"
 julia = "^1.6.0"
