--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NLPModelsAlgencan"
 uuid = "04216931-dc08-4b80-8a27-8a88dc4b9604"
 authors = ["Paulo J. S. Silva <pjssilva@gmail.com>", "Ilan Francisco da Silva <ilanfsilva@gmail.com>]"]
-version = "0.5.1"
+version = "0.5.2"
 
 [deps]
 ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
@@ -18,12 +18,12 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-ADNLPModels = "0.3"
+Coverage = "1.2 - 1.5"
 BinDeps = "1.0"
-CUTEst = "0.12"
-Coverage = "1.2"
-NLPModels = "0.18"
-NLPModelsJuMP = "0.9, 0.10, 0.11"
+NLPModels = "0,18 - 0.19"
+NLPModelsJuMP = "0.9 - 0.11"
 SolverCore = "0.2"
 SolverTools = "0.8"
+ADNLPModels = "0.3"
+CUTEst = "0.12"
 julia = "^1.6.0"
