--- a/Project.toml
+++ b/Project.toml
@@ -18,12 +18,12 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-Coverage = "1.2 - 1.5"
+Coverage = "1.2 - 1.6"
 BinDeps = "1.0"
 NLPModels = "0.18 - 0.19"
-NLPModelsJuMP = "0.9 - 0.11"
-SolverCore = "0.2"
+NLPModelsJuMP = "0.9 - 0.12"
+SolverCore = "0.2 - 0.3"
 SolverTools = "0.8"
-ADNLPModels = "0.3"
-CUTEst = "0.12"
+ADNLPModels = "0.3 - 0.4"
+CUTEst = "0.12 - 0.13"
 julia = "^1.6.0"
