--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "NLPModelsAlgencan"
 uuid = "04216931-dc08-4b80-8a27-8a88dc4b9604"
 authors = ["Paulo J. S. Silva <pjssilva@gmail.com>", "Ilan Francisco da Silva <ilanfsilva@gmail.com>]"]
-version = "0.5.2"
+version = "0.6.0"
 
 [deps]
 ADNLPModels = "54578032-b7ea-4c30-94aa-7cbd1cce6c9a"
@@ -22,7 +22,7 @@ Coverage = "1.2 - 1.6"
 BinDeps = "1.0"
 NLPModels = "0.18 - 0.19"
 NLPModelsJuMP = "0.9 - 0.12"
-SolverCore = "0.2 - 0.3"
+SolverCore = "0.3"
 SolverTools = "0.8"
 ADNLPModels = "0.3 - 0.4"
 CUTEst = "0.12 - 0.13"
