--- a/Project.toml
+++ b/Project.toml
@@ -5,17 +5,21 @@ version = "0.6.1"
 
 [deps]
 BinDeps = "9e28174c-4ba2-5203-b857-d8d62c4213ee"
+CUTEst = "1b53aba6-35b6-5f92-a507-53c67d53f819"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLPModels = "a4795742-8479-5a88-8948-cc11e1c8c1a6"
+NLPModelsIpopt = "f4238b75-b362-5c4c-b852-0801c9a21d71"
+NLPModelsJuMP = "792afdf1-32c1-5681-94e0-d7bf7a5df49e"
 SolverCore = "ff4d7338-4cf1-434d-91df-b86cb86fb843"
 SolverTools = "b5612192-2639-5dc1-abfe-fbedd65fab29"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-Coverage = "1.2 - 1.6"
 BinDeps = "1.0"
+Coverage = "1.2 - 1.6"
 NLPModels = "0.18 - 0.21"
 SolverCore = "0.3"
 SolverTools = "0.8 - 0.9"
